--- a/index.html
+++ b/index.html
@@ -93,22 +93,17 @@ body{
   border-radius:20px;
   position:relative;
   overflow:hidden;
-  display:flex;
-  justify-content:space-around;
-  align-items:flex-end;
   font-size:50px;
 }
 
-/* Character animation */
+/* Characters */
 .character{
-  display:inline-block;
+  position:absolute;
+  bottom:10px;
   cursor:pointer;
-  animation:bounce 0.6s infinite;
   user-select:none;
-}
-@keyframes bounce{
-  0%,100%{transform:translateY(0);}
-  50%{transform:translateY(-20px);}
+  font-size:50px;
+  transition: left 0.1s, top 0.1s;
 }
 
 /* Floating hearts */
@@ -135,6 +130,26 @@ body{
 @keyframes fall{
   0%{transform:translateY(0) rotate(0deg);}
   100%{transform:translateY(300px) rotate(360deg); opacity:0;}
+}
+
+/* Love popup messages */
+.love-popup{
+  position:absolute;
+  background:var(--hotpink);
+  color:white;
+  padding:5px 10px;
+  border-radius:15px;
+  font-size:14px;
+  pointer-events:none;
+  animation:bounceFade 1.5s forwards;
+  white-space:nowrap;
+  opacity:0;
+}
+@keyframes bounceFade{
+  0%{transform:translateY(0) scale(0.8); opacity:0;}
+  30%{transform:translateY(-20px) scale(1); opacity:1;}
+  60%{transform:translateY(-10px) scale(1.1);}
+  100%{transform:translateY(-50px) scale(1); opacity:0;}
 }
 </style>
 </head>
@@ -179,8 +194,9 @@ function unlock(){
   if(input === correctPassword){
     document.getElementById("lock").style.display="none";
     document.getElementById("love-question").style.display="block";
-    document.getElementById("music").muted=false; // unmute for mobile autoplay
-    document.getElementById("music").play();
+    const music = document.getElementById("music");
+    music.muted = false;
+    music.play();
   } else { alert("Wrong password 💔"); }
 }
 
@@ -193,11 +209,12 @@ function answerYes(){
   launchConfetti();
   setTimeout(()=>{
     document.getElementById("love-question").style.display="none";
-    document.getElementById("game").style.display="flex";
+    document.getElementById("game").style.display="block";
+    startGame();
   },800);
 }
 
-/* Click characters to spawn hearts */
+/* Tap characters to spawn hearts */
 document.querySelectorAll(".character").forEach(char=>{
   char.addEventListener("click", e=>{
     for(let i=0;i<5;i++){
@@ -226,6 +243,57 @@ function launchConfetti(){
     game.appendChild(conf);
     setTimeout(()=>conf.remove(),2000);
   }
+}
+
+/* Game logic: characters follow pointer and love messages */
+function startGame(){
+  const guy = document.getElementById("guy");
+  const lady = document.getElementById("lady");
+  const game = document.getElementById("game");
+  let pointerX = 180, pointerY = 200;
+
+  // Move characters toward pointer
+  setInterval(()=>{
+    let gx = parseFloat(guy.style.left) || 50;
+    let gy = parseFloat(guy.style.top) || 200;
+    let lx = parseFloat(lady.style.left) || 250;
+    let ly = parseFloat(lady.style.top) || 200;
+
+    gx += (pointerX - gx)*0.05;
+    gy += (pointerY - gy)*0.05;
+    lx += (pointerX - lx)*0.05;
+    ly += (pointerY - ly)*0.05;
+
+    guy.style.left = gx + "px";
+    guy.style.top = gy + "px";
+    lady.style.left = lx + "px";
+    lady.style.top = ly + "px";
+  },20);
+
+  // Track mouse / touch
+  game.addEventListener("mousemove", e=>{
+    const rect = game.getBoundingClientRect();
+    pointerX = e.clientX - rect.left - 25;
+    pointerY = e.clientY - rect.top - 25;
+  });
+  game.addEventListener("touchmove", e=>{
+    e.preventDefault();
+    const rect = game.getBoundingClientRect();
+    pointerX = e.touches[0].clientX - rect.left - 25;
+    pointerY = e.touches[0].clientY - rect.top - 25;
+  }, {passive:false});
+
+  // Random love messages
+  const messages = ["💖 I adore you!","❤️ You are my sunshine!","💕 Kiss me!","💗 Always yours!"];
+  setInterval(()=>{
+    const msg = document.createElement("div");
+    msg.className="love-popup";
+    msg.innerText = messages[Math.floor(Math.random()*messages.length)];
+    msg.style.left = Math.random()*250 + "px";
+    msg.style.top = Math.random()*200 + "px";
+    game.appendChild(msg);
+    setTimeout(()=>msg.remove(),1500);
+  },1500);
 }
 </script>
 </body>
