--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ body{
   background:var(--pink);
 }
 
-/* Phone */
 .phone{
   width:360px;
   height:640px;
@@ -35,7 +34,6 @@ body{
   overflow:hidden;
 }
 
-/* Buttons */
 button{
   background:var(--hotpink);
   color:white;
@@ -47,7 +45,6 @@ button{
   cursor:pointer;
 }
 
-/* Screens */
 .screen{display:none;}
 .screen.active{display:block;}
 
@@ -59,7 +56,6 @@ input{
   text-align:center;
 }
 
-/* Game */
 #game{
   position:relative;
   width:100%;
@@ -76,7 +72,6 @@ input{
   cursor:pointer;
 }
 
-/* Hearts */
 .heart{
   position:absolute;
   animation:float 1.4s forwards;
@@ -85,7 +80,6 @@ input{
   to{transform:translateY(-150px) scale(1.5);opacity:0;}
 }
 
-/* Confetti */
 .confetti{
   position:absolute;
   width:8px;
@@ -97,7 +91,6 @@ input{
   to{transform:translateY(300px) rotate(360deg);opacity:0;}
 }
 
-/* Love messages */
 .popup{
   position:absolute;
   background:var(--hotpink);
@@ -113,21 +106,9 @@ input{
   100%{transform:scale(1) rotate(-10deg) translateY(-60px);opacity:0;}
 }
 
-/* Gift box */
-#gift{
-  font-size:60px;
-  cursor:pointer;
-}
-
-/* Flower */
-#flower{
-  font-size:90px;
-  animation:bloom 1s forwards;
-}
-@keyframes bloom{
-  from{transform:scale(0);}
-  to{transform:scale(1);}
-}
+#gift{font-size:60px;cursor:pointer;}
+#flower{font-size:90px;animation:bloom 1s forwards;}
+@keyframes bloom{from{transform:scale(0);}to{transform:scale(1);}}
 </style>
 </head>
 
@@ -139,7 +120,6 @@ input{
 
 <div class="phone">
 
-<!-- PASSWORD -->
 <div class="screen active" id="lock">
   <h2>💖 Love Game 💖</h2>
   <p>Enter password</p>
@@ -148,6 +128,131 @@ input{
   <button onclick="unlock()">Open</button>
 </div>
 
-<!-- LOVE QUESTION -->
 <div class="screen" id="question">
-  <
+  <p>Do you love Matthew? 💘</p>
+  <button onclick="yes()">Yes I do</button>
+  <button onclick="no()">No I don’t</button>
+  <div id="msg"></div>
+</div>
+
+<div class="screen" id="giftScreen">
+  <p>Tap the box 🎁</p>
+  <div id="gift" onclick="openGift()">🎁</div>
+</div>
+
+<div class="screen" id="flowerScreen">
+  <div id="flower">🌸</div>
+  <p><b>I so much love you boo boo 💖</b></p>
+</div>
+
+<div class="screen" id="gameScreen">
+  <div id="game">
+    <div class="character" id="boy">🧑‍💼</div>
+    <div class="character" id="girl">👩‍🦰</div>
+  </div>
+</div>
+
+</div>
+
+<script>
+const pw="aminatta";   // 🔐 PASSWORD CHANGED HERE
+
+let x=150,y=150;
+let bx=40,by=200,gx=260,gy=200;
+
+function unlock(){
+  if(pw===document.getElementById("pw").value){
+    show("question");
+    musicOn();
+  } else alert("Wrong password 😂");
+}
+
+function no(){ msg.innerHTML="Wrong choice 😂"; }
+
+function yes(){
+  msg.innerHTML="I love you too ❤️";
+  confetti();
+  setTimeout(()=>show("giftScreen"),800);
+}
+
+function openGift(){
+  show("flowerScreen");
+  setTimeout(()=>show("gameScreen"),1600);
+  startGame();
+}
+
+function show(id){
+  document.querySelectorAll(".screen").forEach(s=>s.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+}
+
+function musicOn(){
+  const m=document.getElementById("music");
+  m.muted=false;
+  m.play();
+}
+
+function confetti(){
+  for(let i=0;i<40;i++){
+    let c=document.createElement("div");
+    c.className="confetti";
+    c.style.left=Math.random()*320+"px";
+    c.style.background=["#ff5fa2","#ffd6e8","#ff85b3"][i%3];
+    document.body.appendChild(c);
+    setTimeout(()=>c.remove(),1500);
+  }
+}
+
+function startGame(){
+  const game=document.getElementById("game");
+  const boy=document.getElementById("boy");
+  const girl=document.getElementById("girl");
+
+  game.addEventListener("mousemove",e=>{
+    const r=game.getBoundingClientRect();
+    x=e.clientX-r.left;
+    y=e.clientY-r.top;
+  });
+
+  game.addEventListener("touchmove",e=>{
+    const r=game.getBoundingClientRect();
+    x=e.touches[0].clientX-r.left;
+    y=e.touches[0].clientY-r.top;
+  });
+
+  setInterval(()=>{
+    bx+=(x-bx)*0.05;
+    by+=(y-by)*0.05;
+    gx+=(bx-gx)*0.05;
+    gy+=(by-gy)*0.05;
+    boy.style.left=bx+"px"; boy.style.top=by+"px";
+    girl.style.left=gx+"px"; girl.style.top=gy+"px";
+  },20);
+
+  game.onclick=e=>{
+    for(let i=0;i<5;i++){
+      let h=document.createElement("div");
+      h.className="heart";
+      h.textContent="💖";
+      h.style.left=e.offsetX+"px";
+      h.style.top=e.offsetY+"px";
+      game.appendChild(h);
+      setTimeout(()=>h.remove(),1400);
+    }
+  };
+
+  const words=["My One and Only 💖","My Love ❤️","My Mama 🌸","Sweetheart 💕","My Boo Boo 😘"];
+  setInterval(()=>{
+    let p=document.createElement("div");
+    p.className="popup";
+    p.textContent=words[Math.floor(Math.random()*words.length)];
+    p.style.left=Math.random()*220+"px";
+    p.style.top=Math.random()*200+"px";
+    game.appendChild(p);
+    setTimeout(()=>p.remove(),1600);
+  },1400);
+}
+</script>
+
+</body>
+</html>
